# bnc-tui

./: .gitignore  CLAUDE.md  LICENSE  README.md  issues  pyproject.toml
.github/workflows/: tests.yml
app/: __init__.py  api.py  binance_client.py  tui.py
app/backtest/: __init__.py  cli.py  engine.py  models.py  strategies.py
app/clients/: binance_futures.py  binance_rest.py
app/models/: events.py
app/storage/: groups.py  market_data.py
app/streams/: binance_kline_ws.py  binance_ws.py  event_bus.py
app/tui/: app.py  palette.py
app/tui/screens/: trade_list.py
docs/: backtest-strategies.md
scratch/: ws_event_bus.py  ws_hello.py  ws_stream_manager.py
tests/: test_backtest.py  test_candles.py  test_groups.py  test_market_data.py  test_streams.py
