[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnc-tui"
version = "0.1.0"
description = "Minimal FastAPI + Textual Binance dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
bnc-api = "app.api:main"
bnc-tui = "app.tui:main"

[tool.setuptools]
packages = ["app"]
