[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bnc-tui"
version = "0.2.0"
description = "WebSocket-first Binance terminal dashboard"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
    "websockets>=13.0",
    "cachetools>=5.0",
    "tenacity>=9.0",
]

[project.scripts]
bnc-tui = "app.tui.app:main"

[tool.setuptools]
packages = ["app", "app.streams", "app.models", "app.tui", "app.tui.screens", "app.clients", "app.storage"]
